Small change revert

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -5,5 +5,5 @@ search: false
 
 @charset "utf-8";
 
-@use "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
-@use "minimal-mistakes"; // main partials
+@import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
+@import "minimal-mistakes"; // main partials
